# parallel_algorithms-hw

./: CMakeLists.txt  README.md  main.cpp
parallel_bfs/: README.md  parallel_bfs.h
parallel_bfs/tests/: CMakeLists.txt  graph_tools.h  run_bfs_tests.cpp
parallel_qsort/: README.md  parallel_quicksort.h
parallel_qsort/parallel_tools/: parallel_filter.h  parallel_map.h  parallel_scan.h  sequential_tools.h  sequentional_tools.h
parallel_qsort/tests/: CMakeLists.txt  run_primitives_tests.cpp  run_qsort_tests.cpp
src/: parallel_quicksort.h  quicksorts.h
src/parallel_tools/: parallel_filter.h  parallel_map.h  parallel_scan.h  sequentional_tools.h
src/tests/: CMakeLists.txt  qsort_tests.cpp  run_primitives_tests.cpp  run_qsort_tests.cpp  run_tests.cpp  sequentional_tools.h
